--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,123 @@
+*{
+    font-family: 'Poppins', sans-serif;
+}
+body{
+  background-color: #222831;
+  color: white;
+}
+
 .book{
     width: 250px;
     height: 250px;
-    background-color: black;
-    color: white;
-
+    text-align: center;
+    border-radius: 12px;
+    background-color: #393E46;
 }
 
 #root{
-    display: flex;
-    justify-content: space-around;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 20px;
+    grid-auto-flow: row;
+    row-gap: 20px;
+}
+
+
+#warn{
+    color: red;
+    text-align: center;
+}
+
+#form{
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    width: 300px;
+    height: 300px;
+    background-color: #00ADB5;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    padding: 15px;
+    padding-bottom: 0px;
+    border-radius: 12px;
+    /* display: grid; */
+}
+
+label{
+  margin-left: 75px;
+  /* display: block; */
+  margin-top: 20px;
+
+}
+input{
+  align-items: center;
+  border-radius: 8px;
+  border: none;
+  background-color: #EEEEEE;
+  margin-top: 10px;
+  margin-left: 5px;
+  width: 70px;
+
+}
+
+form button{
+  padding: 10px;
+  border-radius: 8px;
+  border: none;
+  width: 80px;
+  margin-top: 25px;
+  font-size: 17px;
+  margin-left: 100px;
+}
+
+.book button{
+  border: 0;
+  border-radius: 12px;
+  color: #FFFFFF;
+  cursor: pointer;
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  background-color: #222831;
+  padding: 10px;
+  color: white;
+  font-weight: 500;
+  line-height: 2.5;
+  outline: transparent;
+  padding: 0 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  margin-right: 10px;
+  /* color: black; */
+}
+
+
+
+#form--button{
+  background-color: #EEEEEE;
+  color: black;
+  border-radius: 999px;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 16px;
+  outline: 0 solid transparent;
+  padding: 8px 18px;
+  width: fit-content;
+  word-break: break-word;
+  border: 0;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+#delete-btn{
+  background-color: red;
 }
